--- a/marketwiz/src/App.css
+++ b/marketwiz/src/App.css
@@ -11,5 +11,40 @@ body {
   margin: 0;
   font-family: "CocoSharp Trial","Poppins", sans-serif;
 }
+.nav{
+  display: flex;
+  background: #28292B;
+  justify-content: space-between;
+  padding: 0px 120px;
+  align-items: center;
+  align-self: stretch;
+  height: 112px;
+}
+
+.nav-list{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  list-style: none;
+  color: #E2E2E2;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.nav-login-button{
+  display: flex;
+  padding: 14px 24px;
+  align-items: center;
+  gap: 8px;
+  border-radius: 12px;
+  background: linear-gradient(113deg, #E4EB78 16.28%, #72CB64 97.76%);
+  color: #0C0C0C;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
 
 
