--- a/marketwiz/src/App.css
+++ b/marketwiz/src/App.css
@@ -31,6 +31,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  margin-top: 11px;
 }
 
 .nav-login-button{
@@ -89,4 +90,105 @@ body {
   gap: 8px;
   color: #FFF;
   margin-top: 40px;
+}
+
+.info{
+  display: flex;
+  height: 736px;
+  padding: 120px 120px 100px 122px;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  background: #28292B;
+}
+
+.info-left{
+    display: flex;
+    width: 550px;
+    height: 467px;
+    padding: 167px 0px 141px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    background: #F0F0F0;
+    box-shadow: 13px 0px 12px 0px rgba(0, 0, 0, 0.19);
+    border-radius: 42px;
+}
+
+.info-right{
+  display: flex;
+  padding: 14px;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 10px;
+  flex-shrink: 0;
+  margin-left: -45px;
+}
+
+.info-items{
+  display: flex;
+  align-items: center;
+  flex-shrink: 30px;
+}
+
+.info-left-items{
+  display: flex;
+  width: 403px;
+  height: 395px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 44px;
+  flex-shrink: 0;
+}
+
+.info-left-text{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  align-self: stretch;
+}
+
+.info-left-text > h3{
+  color: #858585;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 18px; /* 112.5% */
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.info-left-text > h1{
+  color: #121212;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130.5%; /* 58.725px */
+  letter-spacing: -0.45px;
+  align-self: stretch;
+}
+
+.info-left-text > h2{
+  color: #4D4D4D;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 128%; /* 23.04px */
+  align-self: stretch;
+}
+
+.info-button{
+  display: flex;
+  font-family: 'Poppins';
+  width: 144px;
+  padding: 14px 12px 14px 24px;
+  align-items: center;
+  gap: 8px;
+  border-radius: 12px;
+  border: 1px solid #010F00;
+  color: black;
 }
