--- a/marketwiz/src/App.css
+++ b/marketwiz/src/App.css
@@ -192,3 +192,70 @@ body {
   border: 1px solid #010F00;
   color: black;
 }
+
+.team{
+  display: flex;
+  padding: 94px 120px 120px 120px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 44px;
+  align-self: stretch;
+  background: #F0F0F0;
+}
+
+.team-info{
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.team-title{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  flex-shrink: 0;
+}
+
+.team-title>h1{
+  color: #1C1C1C;
+  text-align: center;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130%; /* 78px */
+  letter-spacing: -1px;
+  align-self: stretch;
+}
+
+.team-title>p{
+  color: #1C1C1C;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  align-self: stretch; /* 150% */
+}
+
+.team-image-frame{
+  display: flex;
+
+  justify-content: center;
+  align-items: flex-end;
+  flex-shrink: 0;
+}
+
+.team-image-left{
+  display: flex;
+  margin-top: 60px;
+  padding-left: 1px;
+  align-items: flex-start;
+  gap: 13px;
+  flex-direction:column ;
+  flex-shrink: 0;
+}
