--- a/marketwiz/src/App.css
+++ b/marketwiz/src/App.css
@@ -195,7 +195,7 @@ body {
 
 .team{
   display: flex;
-  padding: 94px 120px 120px 120px;
+  padding: 120px 120px 120px 120px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -258,4 +258,121 @@ body {
   gap: 13px;
   flex-direction:column ;
   flex-shrink: 0;
+}
+
+.contact{
+  display: flex;
+  height: 735px;
+  padding: 120px;
+  flex-direction: column;
+  align-items: center;
+  gap: 64px;
+  align-self: stretch;
+  background: radial-gradient(54.5% 54.17% at 51.49% 44.83%, rgba(122, 210, 110, 0.38) 0%, rgba(0, 0, 0, 0.00) 100%), radial-gradient(111.35% 91.29% at -9.29% 16.39%, rgba(141, 211, 179, 0.34) 0%, rgba(0, 0, 0, 0.00) 100%), linear-gradient(229deg, rgba(218, 229, 124, 0.39) -20.55%, rgba(156, 163, 96, 0.39) -20.55%, rgba(40, 41, 43, 0.39) 42.75%), #28292B;
+}
+
+.contact-title{
+  display: flex;
+  width: 512px;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.contact-title>h1{
+  color: #FFF;
+  text-align: center;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130%; /* 78px */
+  letter-spacing: -1px;
+  align-self: stretch;
+}
+
+.contact-title>p{
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 100% */
+  text-transform: capitalize;
+}
+
+.contact-info{
+  display: flex;
+  width: 940px;
+  height: 305px;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.contact-info-left{
+  display: flex;
+  width: 459px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  align-self: stretch;
+  background: #F0F0F0;
+  box-shadow: 13px 0px 12px 0px rgba(0, 0, 0, 0.19);
+  border-radius: 42px;
+}
+
+.contact-info-left-items{
+  display: flex;
+  width: 382px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 44px;
+}
+
+.contact-info-left-items-frame{
+  display: flex;
+  width: 382px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;}
+
+.contact-info-left-items-frame > p{
+  color: #4D4D4D;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 128%; /* 23.04px */
+
+}
+.contact-info-heading{
+  color: #121212;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130.5%; /* 58.725px */
+  letter-spacing: -0.45px;
+  align-self: stretch;
+
+}
+.contact-info-subheading{
+  color: #4D4D4D;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 128%; /* 23.04px */
+
+}
+
+.contact-info-right{
+  display: flex;
+  width: 481px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  align-self: stretch;
+  background: #F0F0F0;
+  box-shadow: 13px 0px 12px 0px rgba(0, 0, 0, 0.19);
+  border-radius: 42px;
 }
