--- a/marketwiz/src/App.css
+++ b/marketwiz/src/App.css
@@ -193,9 +193,10 @@ body {
   color: black;
 }
 
+
 .team{
   display: flex;
-  padding: 120px 120px 120px 120px;
+  padding: 140px 120px 140px 120px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -263,12 +264,34 @@ body {
 .contact{
   display: flex;
   height: 735px;
-  padding: 120px;
+  padding: 140px 120px 140px 122px;
   flex-direction: column;
   align-items: center;
   gap: 64px;
   align-self: stretch;
   background: radial-gradient(54.5% 54.17% at 51.49% 44.83%, rgba(122, 210, 110, 0.38) 0%, rgba(0, 0, 0, 0.00) 100%), radial-gradient(111.35% 91.29% at -9.29% 16.39%, rgba(141, 211, 179, 0.34) 0%, rgba(0, 0, 0, 0.00) 100%), linear-gradient(229deg, rgba(218, 229, 124, 0.39) -20.55%, rgba(156, 163, 96, 0.39) -20.55%, rgba(40, 41, 43, 0.39) 42.75%), #28292B;
+}
+
+.contact-left{
+  display: flex;
+  width: 459px;
+  padding: 129px 0px 129px 80px;
+  margin-right: -160px;
+  margin-left: 80px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  background: #F0F0F0;
+  box-shadow: 13px 0px 12px 0px rgba(0, 0, 0, 0.19);
+  border-radius: 42px;
+}
+
+.contact-items{
+  display: flex;
+  align-items: center;
+  flex-shrink: 30px;
 }
 
 .contact-title{
@@ -302,49 +325,27 @@ body {
 .contact-info{
   display: flex;
   width: 940px;
-  height: 305px;
   align-items: center;
   flex-shrink: 0;
 }
 
-.contact-info-left{
+.contact-left-items{
   display: flex;
-  width: 459px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
-  align-self: stretch;
-  background: #F0F0F0;
-  box-shadow: 13px 0px 12px 0px rgba(0, 0, 0, 0.19);
-  border-radius: 42px;
-}
-
-.contact-info-left-items{
-  display: flex;
-  width: 382px;
+  /*height: 395px;*/
   flex-direction: column;
   align-items: flex-start;
   gap: 44px;
+  flex-shrink: 0;
 }
 
-.contact-info-left-items-frame{
+.contact-left-text{
   display: flex;
   width: 382px;
   flex-direction: column;
   align-items: flex-start;
-  gap: 20px;}
-
-.contact-info-left-items-frame > p{
-  color: #4D4D4D;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 128%; /* 23.04px */
-
+  gap: 40px;
 }
-.contact-info-heading{
+.contact-left-text >h1{
   color: #121212;
   font-size: 45px;
   font-style: normal;
@@ -352,27 +353,95 @@ body {
   line-height: 130.5%; /* 58.725px */
   letter-spacing: -0.45px;
   align-self: stretch;
-
 }
-.contact-info-subheading{
+.contact-left-text >p{
   color: #4D4D4D;
+  font-family: "CocoSharp Trial";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 128%; /* 23.04px */
-
+  align-self: stretch;
+  max-width: 290px;
 }
 
-.contact-info-right{
+.contact-right{
   display: flex;
-  width: 481px;
+  width: 459px;
+  padding: 104px 0px 104px 0px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
   flex-shrink: 0;
-  align-self: stretch;
   background: #F0F0F0;
   box-shadow: 13px 0px 12px 0px rgba(0, 0, 0, 0.19);
   border-radius: 42px;
+  margin-left: -80px;
 }
+
+.contact-right-items{
+  display: flex;
+  width: 378px;
+  height: 253px;
+  flex-direction: column;
+  align-items: center;
+  gap: 44px;
+}
+
+.contact-right-text{
+  display: flex;
+  width: 378px;
+  height: 252px;
+  flex-direction: column;
+  align-items: center;
+  margin-top:10px ;
+  gap: 26px;
+  flex-shrink: 0;
+}
+
+.contact-right-text > input{
+  width: 378px;
+  height: 63px;
+  flex-shrink: 0;
+  border-radius: 40px;
+  background: #D9D9D9;
+  color: rgba(9, 2, 2, 0.54);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130.5%; /* 23.49px */
+  display: flex;
+  width: 305px;
+  height: 63px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  align-self: center;
+  text-align: center;
+}
+.contact-right-text > a{
+  width: 156px;
+  height: 53px;
+  flex-shrink: 0;
+  border-radius: 28px;
+  align-self: center;
+  background: #28292B;
+}
+.contact-button{
+  display: flex;
+  width: 111.621px;
+  height: 31.642px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130.5%; /* 26.1px */
+  align-self: center;
+  text-align: center;
+}
+
