--- a/marketwiz/src/App.css
+++ b/marketwiz/src/App.css
@@ -403,10 +403,11 @@ body {
   flex-shrink: 0;
 }
 
-.contact-right-text > input{
+.form-input{
   width: 378px;
   height: 63px;
   flex-shrink: 0;
+  font-family: Poppins;
   border-radius: 40px;
   background: #D9D9D9;
   color: rgba(9, 2, 2, 0.54);
@@ -424,7 +425,7 @@ body {
   text-align: left;
   padding: 20px;
 }
-.contact-right-text > a{
+#bg-input{
   width: 156px;
   height: 53px;
   flex-shrink: 0;
@@ -433,6 +434,7 @@ body {
   background: #28292B;
 }
 .contact-button{
+  background: #28292B;
   display: flex;
   width: 111.621px;
   height: 31.642px;
@@ -447,6 +449,7 @@ body {
   line-height: 130.5%; /* 26.1px */
   align-self: center;
   text-align: center;
+  align-items: center;
 }
 
 .footer{
